# bwbot

./: .gitignore  CMakeLists.txt  Makefile  TODO  build_handler.cpp  build_handler.h  bwbot.cpp  bwbot.h  bwbot.pro  id_rsa.pub  mainwindow.cpp  mainwindow.h  mainwindow.ui  out  resource_handler.cpp  resource_handler.h  test.h  unit.cpp  unit.h  unit.h.gch  unit_costs.cpp  unit_costs.h  unit_handler.cpp  unit_handler.h  unit_library.cpp  unit_library.h  unit_name.h  unit_stats.cpp  unit_stats.h  unit_tree.cpp  unit_tree.h
archive/: .gitignore  LICENSE
archive/buildorders/: 11rax11gas  11rax11gasb  3hatchmuta  9ps2hh  pvt-4gatezealot  (+1 more)
buildorders/: 101010  11rax11gas  11rax11gasb  11rax12gas  12hatch  12pool  13core  1gategoon  2hatspeedling  3hatch  3hatchlurker  3hatchmuta  3hatspeedling  8rax  factportvult  raxcc
gui/: bwbot.pro  mainwindow.ui
include/: action.h  actionname.h  activeunit.h  allunits.h  build.h  buildhandler.h  buildorder.h  buildorder2.h  bwbot.h  currentframe.h  currentunit.h  exceptions.h  expansions.h  frame2.h  larvahandler.h  resourcehandler.h  resources.h  unit.h  unitdata.h  unitlist.h  unitname.h  units.h  unitstatblock.h  unitstats.h  unittree.h
src/: 11rax11gas  action.cpp  action.h  actionlist.cpp  actionlist.h  actionname.hpp  activeunit.cpp  allunits.cpp  build.cpp  build.h  buildhandler.cpp  buildorder.cpp  buildorder.hpp  bwbot.cpp  currentframe.cpp  currentunit.cpp  currentunit.h  expansionhandler.cpp  expansions.cpp  frame.h  larvahandler.cpp  main.cpp  object.cpp  object.h  resourcehandler.cpp  resources.cpp  resources.h  string_alg.cpp  string_alg.hpp  unit.cpp  unit.h  unitdata.cpp  unitlist.cpp  unitlist.h  units.cpp  unittree.cpp  unittree.h
test/: resources_test.cpp  test_allunits.cpp  test_buildhandler.cpp  test_larvahandler.cpp  test_unitdata.cpp  test_units.cpp  test_unittree.cpp  unit_test.cpp
(+19 files in other folders)
